Fixed window closing and webcam closing issue.
Changed Base64 conversion to version 8 integrated method.